<resources>
    <string name="app_name">Kharetati</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="language">English</string>
    <string name="action_settings">Settings</string>
    <string name="lbl_plotnumber">SEARCH PLOT</string>
    <string name="lbl_login">Login</string>
    <string name="lbl_or">or</string>
    <string name="lbl_contAsGuest">Continue As Guest</string>
    <string name="lbl_next">Next</string>
    <string name="lbl_myMap">Kharetati (My Site-Plan)</string>
    <string name="lbl_requestKharetati">Request Site Plan</string>
    <string name="lbl_zoneRegulation">Zoning Regulations</string>
    <string name="lbl_PlotRegulation">View Plot Regulations</string>
    <string name="storage_permission">Storage Permission</string>
    <string name="storage_permission_message">Kharetati does not have access to your gallery. To enable access, tap Settings and turn on Storage</string>
    <string name="camera_permission">Camera Permission</string>
    <string name="camera_permission_message">Kharetati does not have access to your camera. To enable access, tap Settings and turn on Camera.</string>
    <string name="permission_settings">Settings</string>
    <string name="permission_cancel">Cancel</string>
    <string name="need_permissions">Need Permissions</string>
    <string name="need_permissions_message">To continue further Kharetati App requires permission access. Please click on \"Settings\" and Select \"Permissions\" and provide required permissions </string>
    <string name="title_optionSelect">Enter Owner Name,Owner Emirates ID, Owner Mobile Number and Owner Email</string>
    <string name="title_optionSelect2">Enter  Name, Emirates ID,  Mobile Number and  Email</string>
    <string name="title_zoneReg1">View the plot regulations and building violations for the selected plot through the following </string>
    <string name="title_client">DUBAI MUNICIPALITY</string>
    <string name="title_welcome">WELCOME TO</string>
    <string name="plc_username">DubaiID Username or Email</string>
    <string name="plc_plotNumber">Enter your plot number</string>
    <string name="PLEASE_ENTER_PLOTNUMBER">Please Enter Your Plot Number</string>
    <string name="plc_mobileNumber">Enter Mobile Number</string>
    <string name="plc_password">DubaiID Password</string>
    <string name="plc_emirateId">Enter EmirateID</string>
    <string name="menu_mymaps">My Maps</string>
    <string name="menu_myland">My Land</string>
    <string name="menu_favorites">My Favorites</string>
    <string name="menu_zoneReguration">Zone Regulation</string>
    <string name="menu_downloadSitePlan">Downloaded Site Plan</string>
    <string name="menu_language">Switch to English</string>
    <string name="menu_apptour">Tour the App</string>
    <string name="menu_search">Search</string>
    <string name="menu_help">Help</string>
    <string name="menu_email">Email *</string>
    <string name="menu_download_zone_regulation">Download</string>
    <string name="menu_contact_us">Contact Us</string>
    <string name="menu_about_us">About Us</string>
    <string name="menu_rate_us">Rate Us</string>
    <string name="toggle_lang">العربية‎</string>
    <string name="menu_happiness">Happiness</string>
    <string name="menu_setting">Settings</string>
    <string name="menu_share">Share Kharetati App</string>
    <string name="menu_privacy_policy">Privacy Policy</string>
    <string name="menu_terms_and_conditions">Terms and Conditions</string>
    <string name="menu_related_application">Related Applications</string>
    <string name="menu_accessible">Accessibility</string>
    <string name="menu_faq">FAQ</string>
    <string name="menu_info">Information</string>
    <string name="menu_your_voice">Your Voice</string>
    <string name="login_alert">Please sign in to be able to use this feature</string>
    <string name="msg_loading">Please Wait…</string>
    <string name="msg_gettingUserInfo">Getting User Detail…</string>
    <string name="btn_login_txt">LOGIN</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lbl_app_detail">Geographic Information Systems (GIS) Department at Dubai Municipality.<br></br>
The department was established through a decree (Law No. 6, 2001) of the Ruler of Dubai, the late Sheikh Maktoum Bin Rashid Al Maktoum. The law stipulated that the GIS Department is considered to be the only official body which allows producing geographical data in the Emirate.
GIS Department is considered as an official portal to provide geographical data services, images and spatial maps of Dubai to governmental bodies, the private sector and individuals.
<br></br>
<b>KHARETATI Application</b> is developed by GIS Department – DM to enable land owner or an authorized person by the land owner to view land details and request for site plan for the specified land in the Emirate of Dubai.  The objective is to simplify the process of requesting and receiving the official site plans issued by Survey Department in DM through this mobile application with simple secured steps.
<br></br>
<br></br><u>The application is available on:</u><br></br><br></br>App Store:<br></br>
Google play:<br></br>
</string>
    <string name="Policies">Policies</string>
    <string name="terms_and_conditions_click">Terms and Conditions</string>
    <string name="privacy_policy_click">Privacy policy</string>
    <string name="libraries_we_use">Libraries we use</string>
    <string name="apacheLicense">Apache License Version 2.0</string>
    <string name="email">Email </string>
    <string name="email_hint">Email(mail@abc.com)*</string>
    <string name="feedback_subject">Kharetati Feedback</string>
    <string name="Contact_us_Call_permission">"Kharetati needs permission to make calls to Dubai Municipality."</string>
    <string name="you_are_about_to_call">Call </string>
    <string name="phone">Phone</string>
    <string name="Website">Website</string>
    <string name="Chat">Chat</string>
    <string name="Live_chat_with_our_call_center">Live chat with our call center</string>
    <string name="please_enter_phone">Please enter your phone number</string>
    <string name="social_network">Social Media</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="instagram">Instagram</string>
    <string name="youtube">Youtube</string>
    <string name="email2">Email</string>
    <string name="feedback">Feedback</string>
    <string name="send_your_feedback_about_the_app">Send your feedback about Kharetati</string>
    <string name="title_activity_home">Home</string>
    <string name="favorite">Favourites</string>
    <string name="login">Login</string>
    <string name="next">Next</string>
    <string name="feedback_name">Name *</string>
    <string name="profile_name">Name</string>
    <string name="subject">Subject *</string>
    <string name="feedback_description">Description *</string>
    <string name="description_fav">Description *</string>
    <string name="menu_myfavorites">My Favorites</string>
    <string name="lbl_my_favourites_heading">My Favorites</string>
    <string name="kharetati_app">Kharetati App</string>
    <string name="try_kharetati_app">Download Kharetati App</string>
    <string name="mobile_number_9715xxxxxxxx">9715xxxxxxxx</string>
    <string name="submit">Submit</string>
    <string name="captcha_txt">Move slider to %1$d to authenticate your request</string>
    <string name="captcha_error">Move security slider to requested number to process this request</string>
    <string name="all_fields_are_required">All fields are required</string>
    <string name="CHOOSETHEOPTION">Choose the option</string>
    <string name="CAMERA">Camera</string>
    <string name="LIBRARY">Library</string>
    <string name="internet_connection_problem">Please check your internet connection \n and try again</string>
    <string name="internet_connection_problem1">Please check your internet connection and try again</string>
    <string name="wait_attachment">Please wait. Uploading attachment. This might take time.</string>
    <string name="dm_tx_success">Your request is successfully submitted, transaction reference number: </string>
    <string name="dm_tx_notification">You will receive a notification once the map is issued by Dubai Municipality, so you can click on My Maps from the main menu of the application</string>
    <string name="email_sent_success">Email sent successfully</string>
    <string name="enter_valid_email">Please enter valid Email Address</string>
    <string name="menu_downloaded_site_plan">Downloaded Site Plans</string>
    <string name="downloaded_siteplans">Downloaded Site Plans</string>
    <string name="siteplanreq_underprocess">Site Plan creation request is under process..</string>
    <string name="under_process">Under process</string>
    <string name="NOPLOTFOUNDDETAILTEXT">If you couldn’t find your Plots then kindly update your profile at Dubai Municipality</string>
    <string name="plot_does_not_exist">Please enter a valid plot number</string>
    <string name="logout">Log Out</string>
    <string name="NO_FAVOURITE_PLOTS_FOUND">Currently no favourites are available</string>
    <string name="bookmark">Add To Favourites</string>
    <string name="bookmark_save"> Plot added to the favourite</string>
    <string name="error_response">An error occured while fetching data</string>
    <string name="plotno">Plot No : </string>
    <string name="plotno2">Plot Number:</string>
    <string name="Community">Community</string>
    <string name="confirmation_delete">Are you sure you want to delete?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="PLOTREMOVESSUCCESSFULLY">Plot removed successfully</string>
    <string name="ERRORRESPONSE">Error while retrieving information from server</string>
    <string name="user_name">User name *</string>
    <string name="confirmation_openlink">Are you sure you want to open this link?</string>
    <string name="guest">Guest</string>
    <string name="enter_emirates_id">Please enter your Emirates ID</string>
    <string name="enter_valid_emirates_id">Please enter a valid Emirates ID</string>
    <string name="lbl_warning">Warning</string>
    <string name="ok">Ok</string>
    <string name="please_enter_email_address">Please Enter Your Email Address</string>
    <string name="enter_name">Please enter a name</string>
    <string name="ExcepDetails">EXCEPTION DETAILS</string>
    <string name="FullFrozenDetails">FULLY FROZEN DETAILS</string>
    <string name="FullyAffDetails">FULLY AFFECTED DETAILS</string>
    <string name="CoastDetails">COASTAL DETAILS</string>
    <string name="MetroDetails">METRO DETAILS</string>
    <string name="COMMUNITYANDAREADETAILS">COMMUNITY AND AREA DETAILS</string>
    <string name="choose_checkbox_option">Please choose relevant option</string>
    <string name="UPDATE_YOUR_PROFILE">View Profile</string>
    <string name="retry">Retry</string>
    <string name="app_makani">Makani</string>
    <string name="i_am_owner">I am the owner of the plot</string>
    <string name="slide_2_title">Search Plot</string>
    <string name="slide_2_desc">Kharetati offers a hassle free search option. Simply enter your 7 digit plot number and search. That\'s it. Your plot information will be displayed.</string>
    <string name="slide_2_title_icon">Search Plot icon</string>
    <string name="toggle_layer">Toggle Layer</string>
    <string name="findPlot">FIND YOUR PLOT</string>
    <string name="i_am_resident">I am a UAE resident</string>
    <string name="reload">Reload</string>
    <string name="i_am_not_owner">I am not the owner of the plot</string>
    <string name="register_land" >Register Land</string>
    <string name="feedback_mobile_number">Phone *</string>
</resources>