<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto">
  <item
      android:id="@+id/action_notification"
      app:actionLayout="@layout/notification_update_count"
      app:showAsAction="always"
      android:title=""/>
  <item
    android:id="@+id/menu_download_pdf"
    android:orderInCategory="100"
    android:title="@string/menu_download_zone_regulation"
    app:showAsAction="never" />
  <item
    android:id="@+id/menu_email"
    android:orderInCategory="100"
    android:title="@string/email"
    app:showAsAction="never" />
  <item
      android:id="@+id/menu_saveBookmark"
      android:orderInCategory="100"
      android:title="@string/bookmark"
      app:showAsAction="never" />
</menu>
