<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient_help"
    android:focusable="true">

  <LinearLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_centerInParent="true"
      android:gravity="center_horizontal"
      android:orientation="vertical">



    <ImageView
        android:layout_width="@dimen/img_width_height"
        android:layout_height="@dimen/img_width_height"
        android:contentDescription="@string/slide_2_title_icon"
        android:src="@drawable/searchproperty" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/slide_title"
        android:text="@string/slide_2_title"
        android:textStyle="bold"
        android:layout_marginTop="40dp"


        android:textColor="@android:color/white"
        android:textSize="@dimen/slide_title" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/desc_padding"
        android:paddingRight="@dimen/desc_padding"
        android:text="@string/slide_2_desc"
        android:textAlignment="center"
        android:lineHeight="@dimen/line_height"
        android:textColor="@android:color/white"
        android:textSize="@dimen/slide_desc" />

  </LinearLayout>
</RelativeLayout>
