<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
    android:orientation="vertical"
  tools:context="dm.sime.com.kharetati.fragment.FeedbackFragment">
  <TextView
      android:layout_width="match_parent"
      android:layout_height="48dp"
      android:layout_gravity="center_vertical|center_horizontal"
      android:background="?attr/colorPrimary"
      android:gravity="center_vertical|center_horizontal"
      android:text="@string/feedback"
      android:textAlignment="center"
      android:textColor="@color/white"
      android:textSize="@dimen/loginFontSize"/>


  <ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginLeft="@dimen/activity_horizontal_margin"
      android:layout_marginRight="@dimen/activity_horizontal_margin"
      android:orientation="vertical">

      <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:textDirection="locale"
            android:textAlignment="viewStart"
            android:hint="@string/feedback_name"
            android:maxLength="255"
            android:inputType="textPersonName"
            />
      </android.support.design.widget.TextInputLayout>

      <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:textDirection="locale"
            android:textAlignment="viewStart"
            android:maxLength="50"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            />
      </android.support.design.widget.TextInputLayout>

      <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <EditText
            android:id="@+id/et_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:maxLength="20"
            android:textDirection="locale"
            android:textAlignment="viewStart"
            android:gravity="start"
            android:hint="@string/feedback_mobile_number" />
      </android.support.design.widget.TextInputLayout>



      <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <EditText
            android:id="@+id/et_subject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:hint="@string/subject"
             />
      </android.support.design.widget.TextInputLayout>

      <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <EditText
            android:id="@+id/et_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:hint="@string/feedback_description"
            android:inputType="textMultiLine"
            android:lines="3"
            android:textAlignment="viewStart"
            android:textDirection="locale" />
      </android.support.design.widget.TextInputLayout>


      <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
          android:id="@+id/_tv_seekValue"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_centerHorizontal="true" />


      </RelativeLayout>

      <Button
        android:id="@+id/btn_submitFeedback"
          android:layout_width="150dp"
          android:layout_height="wrap_content"
          android:layout_marginTop="20dp"
          android:layout_marginBottom="20dp"
          android:layout_gravity="center"
          android:background="@drawable/rounded_edittext_gradient"
          android:paddingLeft="@dimen/activity_horizontal_margin"
          android:paddingRight="@dimen/activity_horizontal_margin"
          android:text="@string/submit"
          android:textAllCaps="false"
          android:textColor="@color/white" />

    </LinearLayout>
  </ScrollView>

</LinearLayout>
