<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:mask="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mapFrame"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="dm.sime.com.kharetati.fragment.MapFragment">

    <com.esri.android.map.MapView
        android:id="@+id/map"
        mapoptions.ZoomLevel="16"
        mapoptions.center="25.276987, 55.296249"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        android:visibility="visible" />

    <LinearLayout
        android:id="@+id/fragment_mapToolBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="55dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/btnToggleLayer"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="top|left"
            android:layout_weight="1"
            android:background="@null"
            android:contentDescription="@string/toggle_layer"
            android:padding="5dp"
            android:paddingRight="5dp"
            android:scaleType="fitXY"
            android:src="@drawable/layers_480x480"/>

        <ImageButton
            android:id="@+id/btnMakani"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="left|top"
            android:contentDescription="@string/app_makani"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:background="@null"
            android:padding="5dp"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/makani_512x512"
            android:layout_marginStart="10dp" />

        <ImageButton
            android:id="@+id/btnReset"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="left|top"
            android:layout_weight="1"
            android:contentDescription="@string/reload"
            android:background="@null"
            android:layout_marginLeft="10dp"
            android:padding="5dp"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/reset_512x512"
            android:layout_marginStart="10dp" />
        <ImageButton
            android:id="@+id/btnBookmark"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="left|top"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:background="@null"
            android:contentDescription="@string/bookmark"
            android:padding="5dp"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/favourites_512x512"
            android:layout_marginStart="10dp" />

    </LinearLayout>

    <Button
      android:id="@+id/btnNextFlow"
      android:layout_width="wrap_content"
      android:layout_height="40dp"
        android:minWidth="48dp"
        android:minHeight="48dp"
      android:layout_gravity="bottom|center"
      android:layout_marginBottom="10dp"
      android:background="@drawable/rounded_edittext_gradient"
      android:padding="10dp"
      android:text="@string/next"
      android:textColor="#fff"
      android:visibility="gone" />


    <LinearLayout
        android:id="@+id/fragment_map_layoutSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/white"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView27"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/white"
                android:focusableInTouchMode="false"
                android:gravity="center_vertical"
                android:text="@string/findPlot"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/fragment_map_txtPlotnumber"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:digits="0123456789١٢٣٤٥٦٧٨٩١٠"
                android:gravity="center_vertical|center_horizontal"
                android:hint="-  -  -  -  -  -  -"
                android:inputType="number"
                android:textSize="16sp"
                android:maxLength="20"/>

            <ImageButton
                android:id="@+id/fragment_map_btnSearch"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                android:contentDescription="@string/menu_search"
                android:background="@color/white"
                mask:srcCompat="@android:drawable/ic_menu_search" />


        </LinearLayout>

        <ListView
            android:id="@+id/fragment_map_searchhistory"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:alpha=".9"
            android:background="@android:color/white"
            android:visibility="gone" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/fragment_map_layout_network_connection"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        android:visibility="invisible">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            mask:srcCompat="@drawable/nointernet" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:text="@string/internet_connection_problem"
            android:textSize="16sp" />

        <Button
            android:id="@+id/fragment_map_btnRetry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/rounded_edittext_gradient"
            android:contentDescription="@string/next"
            android:text="@string/retry" />
    </LinearLayout>

</FrameLayout>
