<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:layoutDirection="locale">
    <TextView
        android:id="@+id/checkbox_choose_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:textAlignment="center"

        android:text="@string/choose_checkbox_option"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:visibility="gone"
        />
    <Spinner
        android:id="@+id/spinner_landOwned"
        android:layout_width="267dp"
        android:layout_height="35dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="30dp"
        android:textSize="16sp"
        android:background="@drawable/attachment_spinner_bg"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:visibility="visible"
        android:layout_marginLeft="8dp" />

    <CheckBox
        android:id="@+id/chk_isOwner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:buttonTint="@android:color/holo_blue_dark"
        android:checked="false"
        android:text="@string/i_am_owner"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:visibility="gone"
        />

    <CheckBox
        android:id="@+id/chk_isResident"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:buttonTint="@android:color/holo_blue_dark"
        android:text="@string/i_am_resident"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:visibility="gone"
        />
    <RadioGroup
        android:layout_width="267dp"
        android:layout_height="wrap_content"
        android:id="@+id/rg">
        <RadioButton
            android:id="@+id/rb_isOwner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:buttonTint="@android:color/holo_blue_dark"
            android:checked="false"
            android:text="@string/i_am_owner"
            android:textSize="16sp"
            android:layout_marginBottom="30dp"
            android:textColor="@color/edittextColor"
            android:textStyle="bold"
            android:visibility="visible"
            />

        <RadioButton
            android:id="@+id/rb_notOwner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="30dp"
            android:buttonTint="@android:color/holo_blue_dark"
            android:text="@string/i_am_not_owner"
            android:textSize="16sp"
            android:textColor="@color/edittextColor"
            android:textStyle="bold"
            />
    </RadioGroup>
    <Button
        android:id="@+id/btnNextAttachment"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_margin="8dp"
        android:background="@drawable/rounded_edittext_gradient"
        android:text="@string/lbl_next"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:visibility="visible"
        />



</LinearLayout>